[gd_scene load_steps=6 format=3 uid="uid://danp40eo1ch6a"]

[ext_resource type="Script" path="res://Scenes/repulsion.gd" id="1_rimqr"]
[ext_resource type="Texture2D" uid="uid://jxegfvp3o6kt" path="res://Sprites/blueParticle.png" id="2_mexxx"]
[ext_resource type="Texture2D" uid="uid://c38a4p3cw46g4" path="res://Sprites/RepulsionArea.png" id="3_ilgpy"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4l253"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 150.0
initial_velocity_max = 150.0
gravity = Vector3(0, 0, 0)
scale_min = 10.0
scale_max = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yv7j5"]
radius = 27.0

[node name="Repulsion" type="Node2D"]
position = Vector2(0, -6)
script = ExtResource("1_rimqr")

[node name="RepelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CoolDown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_4l253")
texture = ExtResource("2_mexxx")
lifetime = 0.3
one_shot = true
explosiveness = 0.75

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_ilgpy")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_yv7j5")
disabled = true

[connection signal="timeout" from="RepelTimer" to="." method="_on_repel_timer_timeout"]
[connection signal="timeout" from="CoolDown" to="." method="_on_cool_down_timeout"]
